# neograph

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  docker-compose.yml
.claude/: settings.local.json
.github/: copilot-instructions.md
agents/: Dockerfile  README.md  pyproject.toml  requirements.txt
agents/src/: __init__.py  config.py  server.py
agents/src/agents/: __init__.py  analyzer.py  doc_writer.py  explorer.py
agents/src/tools/: __init__.py  neo4j_tools.py
agents/src/wiki/: __init__.py  generator.py
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/agent/: proxy.go
backend/internal/api/: handlers.go  routes.go
backend/internal/config/: config.go
backend/internal/db/: graph_reader.go  graph_reader_test.go  graph_writer.go  neo4j.go  neo4j_test.go  repository.go  vector_index.go  wiki_reader.go  wiki_reader_test.go  wiki_writer.go  wiki_writer_test.go
backend/internal/embedding/: tei_client.go  tei_client_test.go
backend/internal/git/: clone.go  clone_test.go
backend/internal/indexer/: extractor.go  extractor_test.go  pipeline.go  pipeline_test.go
backend/internal/models/: code_entity.go  file.go  repository.go  wiki.go  wiki_test.go
docs/: research-plan.md
docs/plans/: 2025-01-27-neograph-mvp.md  2025-01-27-phase2-design.md  2025-01-27-phase2-implementation.md  2025-11-27-deepwiki-feature.md  2025-11-28-wiki-generation-design.md  2025-11-28-wiki-generation-impl.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
(+21 files in other folders)
